--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 xcode_project: JenkinsIOSExample.xcodeproj
-xcode_scheme: JenkinsIOSExample
+xcode_scheme: JenkinsIOSExampleTests
